# UR5-on-Summit-Xl

summit_xl_common/summit_xl_common/: package.xml
summit_xl_common/summit_xl_control/: CMakeLists.txt  package.xml
summit_xl_common/summit_xl_control/config/: summit_xl_sim_control.yaml
summit_xl_common/summit_xl_control/launch/: summit_xl_control.launch
summit_xl_common/summit_xl_description/: CMakeLists.txt  package.xml
summit_xl_common/summit_xl_description/models/: summit_xls_std.xacro
summit_xl_common/summit_xl_description/robots/: summit_xls_std.robot
summit_xl_common/summit_xl_localization/: CMakeLists.txt  package.xml
summit_xl_common/summit_xl_localization/config/: gmapping.rviz  gmapping.yaml
summit_xl_common/summit_xl_localization/launch/: amcl.launch  gmapping.launch  map_server.launch
summit_xl_common/summit_xl_navigation/: CMakeLists.txt  package.xml
ur5_common/ur5_common/: CMakeLists.txt  package.xml
ur5_common/ur5_control/: CMakeLists.txt  package.xml
ur5_common/ur5_description/: CMakeLists.txt  package.xml
ur5_on_summit_xl_common/ur5_on_summit_xl_bringup/: CMakeLists.txt  package.xml
ur5_on_summit_xl_common/ur5_on_summit_xl_common/: CMakeLists.txt  package.xml
ur5_on_summit_xl_common/ur5_on_summit_xl_control/: CMakeLists.txt  package.xml
ur5_on_summit_xl_common/ur5_on_summit_xl_description/: CMakeLists.txt  package.xml
ur5_on_summit_xl_common/ur5_on_summit_xl_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur5_on_summit_xl_common/ur5_on_summit_xl_trajectory_execution/: CMakeLists.txt  package.xml
(+62 files in other folders)
